# anime-series

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/: app.py
backend/src/anime/: dependencies.py  models.py  run.py
backend/src/anime/routes/: anime.py  users.py
backend/src/tests/: test_anime.py
docs/: README.md
frontend/: package-lock.json
src/anime/: __init__.py  dependencies.py  models.py
