[tool.poetry]
name = "anime-api"
version = "0.1.0"
description = "API for anime series tracking"
authors = ["losthope <arsen.melnuchyk@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
httpx = "^0.28.1"
sqlmodel = "^0.0.22"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pytest = "^8.3.4"
pytest-coverage = "^0.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
addopts = "-v --cov=anime src/tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
